GKE/TestService/nginx/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.nginx.yourdomain.info`) ##change the domain
      kind: Rule
      services:
        - name: nginx
          port: 80
    - match: Host(`nginx.yourdomain.info`) ## change domain
      kind: Rule
      services:
        - name: nginx
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: local-yourdomain-info-tls #change domain
